--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -1,4 +1,4 @@
 listener 9000
 require_certificate false
 allow_anonymous false
-password_file /mosquitto/config/passwords
+password_file ./passwords
